--- a/package.json
+++ b/package.json
@@ -22,19 +22,15 @@
   "devDependencies": {
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
-    "@types/react-test-renderer": "^16.9.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts-ts": "^3.1.0",
-    "react-test-renderer": "^16.10.1",
+    "rollup": "^1.22.0",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-progress": "^1.1.1",
-    "typescript": "^3.6.3",
-    "rollup": "^1.22.0",
-    "rollup-plugin-typescript2": "^0.24.3"
+    "rollup-plugin-typescript2": "^0.24.3",
+    "typescript": "^3.6.3"
   },
   "peerDependencies": {
     "react": "^16.8.6",
