Updated packages and package.json name modified.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "splice-react-hooks",
+  "name": "example-name",
   "version": "1.0.0",
   "description": "Example template",
   "main": "build/index.js",
